feat: add registration API
