# api.yml
@@ -29,18 +29,52 @@ paths:
             type: integer
       responses:
         '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
+          $ref: "#/components/responses/HelloResponse"
         '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
+          $ref: "#/components/responses/ErrorResponse"
+  /registration:
+    post:
+      summary: Register a new user to the system
+      operationId: registerUser
+      requestBody:
+        $ref: "#/components/requestBodies/RegistrationRequest"
+      responses:
+        '201':
+          $ref: "#/components/responses/RegistrationResponse"
+        '400':
+          $ref: "#/components/responses/ErrorResponse"
+        '500':
+          $ref: "#/components/responses/ErrorResponse"
+
 components:
+  requestBodies:
+    RegistrationRequest:
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/RegistrationRequest"
+      required: true
+
+  responses:
+    HelloResponse:
+      description: Test return
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/HelloResponse"
+    ErrorResponse:
+      description: Error response
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorResponse"
+    RegistrationResponse:
+      description: New user created
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/RegistrationResponse"
+
   schemas:
     HelloResponse:
       type: object
@@ -56,3 +90,30 @@ components:
       properties:
         message:
           type: string
+    RegistrationRequest:
+      type: object
+      properties:
+        phone_number:
+          type: string
+          minLength: 10
+          maxLength: 13
+          pattern: '^\+62\d*$'
+        full_name:
+          type: string
+          minLength: 3
+          maxLength: 60
+        password:
+          type: string
+          minLength: 6
+          maxLength: 64
+      required:
+        - phone_number
+        - full_name
+        - password
+    RegistrationResponse:
+      type: object
+      properties:
+        user_id:
+          type: string
+      required:
+        - user_id
